[gd_scene load_steps=4 format=3 uid="uid://dnpcnvlic8slx"]

[ext_resource type="Script" uid="uid://n82rtmwhm6wo" path="res://Scripts/Game Scripts/death_menu.gd" id="1_64s63"]

[sub_resource type="SystemFont" id="SystemFont_5mx1p"]
font_names = PackedStringArray("Perfect DOS VGA 437 Win")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_b2qq5"]
font_names = PackedStringArray("Perfect DOS VGA 437 Win")
subpixel_positioning = 0

[node name="death_menu" type="CanvasLayer"]
visible = false
script = ExtResource("1_64s63")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="pause_lable" type="Label" parent="."]
offset_left = 368.0
offset_top = 88.0
offset_right = 790.0
offset_bottom = 139.0
theme_override_fonts/font = SubResource("SystemFont_5mx1p")
theme_override_font_sizes/font_size = 50
text = "You Have Died"
horizontal_alignment = 1

[node name="checkpoint_button" type="Button" parent="."]
process_mode = 2
offset_left = 344.0
offset_top = 192.0
offset_right = 808.0
offset_bottom = 256.0
pivot_offset = Vector2(-608, -32)
theme_override_fonts/font = SubResource("SystemFont_b2qq5")
theme_override_font_sizes/font_size = 35
disabled = true
text = "Restart From Checkpoint"

[node name="restart_button" type="Button" parent="."]
process_mode = 2
offset_left = 440.0
offset_top = 320.0
offset_right = 712.0
offset_bottom = 384.0
pivot_offset = Vector2(-608, -32)
theme_override_fonts/font = SubResource("SystemFont_b2qq5")
theme_override_font_sizes/font_size = 35
disabled = true
text = "Restart Level"

[node name="exit_button" type="Button" parent="."]
process_mode = 2
offset_left = 448.0
offset_top = 448.0
offset_right = 704.0
offset_bottom = 512.0
pivot_offset = Vector2(-608, -32)
theme_override_fonts/font = SubResource("SystemFont_b2qq5")
theme_override_font_sizes/font_size = 35
disabled = true
text = "Exit"

[connection signal="pressed" from="checkpoint_button" to="." method="_on_checkpoint_button_pressed"]
[connection signal="pressed" from="restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="restart_button" to="." method="_on_resume_button_2_pressed"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
